modified and fixed old stuff

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 
   <div class="col-sm-3 teliserial"  title="Click Me for More Hakka Hakki">
     <hr>
-    <span><h3 [ngClass]="">Hakka Haki<span class="blink_me">**Latest** </span></h3></span>
+    <span><h3 [ngClass]="">Nepal IDOL SEASON-2<span class="blink_me">**Latest** </span></h3></span>
     <hr>
       <div *ngFor="let data of hakkaHakkiData.items; let first=first;">
     <span *ngIf="first">
@@ -58,7 +58,7 @@
   </div>
   <div class="col-sm-3">
     <hr>
-    <span ><h3 appPractice>Bhadragoal</h3></span>
+    <span ><h3 appPractice>HIMALAYA RODIES</h3></span>
     <hr>
     <div *ngFor="let data of bhadragoalData.items; let i=index">
 
@@ -399,9 +399,9 @@
   <div class="row">
     <div class="row">
       <div class="col-sm-12 subSectionHeading">
-      Nepali Prank Video</div>
+      More NEPALI IDOL SEASON 2</div>
     </div><hr>
-    <div class="col-sm-3"><div *ngFor="let data of nepaliPrank.items; let i=index">
+    <div class="col-sm-3"><div *ngFor="let data of hakkaHakkiData.items; let i=index">
 
     <span *ngIf="i<1">
       <a href="javascript:void(0)" >
@@ -415,7 +415,7 @@
 
     </div>
 
-    <div class="col-sm-3"><div *ngFor="let data of nepaliPrank.items; let i=index">
+    <div class="col-sm-3"><div *ngFor="let data of hakkaHakkiData.items; let i=index">
 
     <span *ngIf="i>0 && i<2">
       <a href="javascript:void(0)" >
@@ -429,7 +429,7 @@
 
     </div>
 
-    <div class="col-sm-3"><div *ngFor="let data of nepaliPrank.items; let i=index">
+    <div class="col-sm-3"><div *ngFor="let data of hakkaHakkiData.items; let i=index">
 
     <span *ngIf="i>1 && i<3">
       <a href="javascript:void(0)" >
@@ -443,7 +443,7 @@
 
     </div>
 
-    <div class="col-sm-3"><div *ngFor="let data of nepaliPrank.items; let i=index">
+    <div class="col-sm-3"><div *ngFor="let data of hakkaHakkiData.items; let i=index">
 
     <span *ngIf="i>2 && i<4">
       <a href="javascript:void(0)" >
