--- a/src/app/pop-up-model/pop-up-model.component.html
+++ b/src/app/pop-up-model/pop-up-model.component.html
@@ -2,7 +2,12 @@
 
 
   <div class="modal-content">
-    <span (click)="close()" aria-hidden="true" class="close" title="Close Video">&times;</span>
+    <!--<span (click)="close()" aria-hidden="true" class="close" title="Close Video">&times;</span>-->
+    <span class="modalCloseButton" (click)="close()">
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="100%" height="100%" viewBox="0 0 50 50" class="modal-close-svg">
+	                        <path d="M25.000,50.000 C11.215,50.000 0.000,38.785 0.000,25.001 C0.000,11.215 11.215,0.000 25.000,0.000 C38.785,0.000 50.000,11.215 50.000,25.001 C50.000,38.785 38.785,50.000 25.000,50.000 ZM25.000,2.632 C12.666,2.632 2.632,12.666 2.632,25.001 C2.632,37.335 12.666,47.368 25.000,47.368 C37.333,47.368 47.368,37.335 47.368,25.001 C47.368,12.666 37.333,2.632 25.000,2.632 ZM35.403,35.405 C35.146,35.662 34.809,35.791 34.473,35.791 C34.136,35.791 33.799,35.662 33.542,35.405 C33.542,35.405 24.999,26.861 24.999,26.861 C24.999,26.861 16.456,35.405 16.456,35.405 C16.199,35.662 15.863,35.791 15.526,35.791 C15.189,35.791 14.853,35.662 14.596,35.405 C14.082,34.891 14.082,34.059 14.596,33.545 C14.596,33.545 23.139,25.001 23.139,25.001 C23.139,25.001 14.596,16.457 14.596,16.457 C14.082,15.943 14.082,15.110 14.596,14.596 C15.110,14.082 15.942,14.082 16.456,14.596 C16.456,14.596 24.999,23.140 24.999,23.140 C24.999,23.140 33.542,14.596 33.542,14.596 C34.056,14.082 34.889,14.082 35.403,14.596 C35.917,15.110 35.917,15.943 35.403,16.457 C35.403,16.457 26.860,25.001 26.860,25.001 C26.860,25.001 35.403,33.545 35.403,33.545 C35.917,34.059 35.917,34.891 35.403,35.405 Z" id="path-1" fill-rule="evenodd"></path>
+	               </svg>
+    </span>
 
     <iframe width="100%" height="100%" [src]="sanitizer.bypassSecurityTrustResourceUrl(videoUrl)" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
