--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 
   <div class="col-sm-3 teliserial"  title="Click Me for More Hakka Hakki">
     <hr>
-    <span><h3 [ngClass]="">Nepal IDOL SEASON-2<span class="blink_me">**Latest** </span></h3></span>
+    <span><h3 [ngClass]="">Nepal IDOL-2<span class="blink_me">**Latest** </span></h3></span>
     <hr>
       <div *ngFor="let data of hakkaHakkiData.items; let first=first;">
     <span *ngIf="first">
